[gd_scene load_steps=3 format=3 uid="uid://cg8w3xrj4kpel"]

[ext_resource type="Script" path="res://ui/debug/time_debug_tab.gd" id="1_time_tab"]
[ext_resource type="Script" path="res://ui/debug/collapsible_section.gd" id="2_collapsible"]

[node name="TimeDebugTab" type="ScrollContainer"]
offset_right = 380.0
offset_bottom = 480.0
script = ExtResource("1_time_tab")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TimeControlSection" type="VBoxContainer" parent="Content"]
layout_mode = 2
script = ExtResource("2_collapsible")
section_title = "Time Control"

[node name="TimeValueLabel" type="Label" parent="Content/TimeControlSection"]
layout_mode = 2
text = "EVENING (0.667)"
horizontal_alignment = 1

[node name="NormalizedTimeSlider" type="HSlider" parent="Content/TimeControlSection"]
layout_mode = 2
min_value = 0.0
max_value = 0.9999
step = 0.001
value = 0.667

[node name="ControlButtons" type="HBoxContainer" parent="Content/TimeControlSection"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="Content/TimeControlSection/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause"

[node name="ResetButton" type="Button" parent="Content/TimeControlSection/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="ProgressionSection" type="VBoxContainer" parent="Content"]
layout_mode = 2
script = ExtResource("2_collapsible")
section_title = "Progression"

[node name="TimeFactorLabel" type="Label" parent="Content/ProgressionSection"]
layout_mode = 2
text = "Time Factor: 0.70"

[node name="TimeFactorSlider" type="HSlider" parent="Content/ProgressionSection"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.7

[node name="DistanceFactorLabel" type="Label" parent="Content/ProgressionSection"]
layout_mode = 2
text = "Distance Factor: 0.30"

[node name="DistanceFactorSlider" type="HSlider" parent="Content/ProgressionSection"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.3

[node name="CycleDurationLabel" type="Label" parent="Content/ProgressionSection"]
layout_mode = 2
text = "Full Cycle: 600s (10.0m)"

[node name="CycleDurationSlider" type="HSlider" parent="Content/ProgressionSection"]
layout_mode = 2
min_value = 60.0
max_value = 3600.0
step = 10.0
value = 600.0

[node name="QuickJumpSection" type="VBoxContainer" parent="Content"]
layout_mode = 2
script = ExtResource("2_collapsible")
section_title = "Quick Jump"

[node name="QuickTimeButtons" type="GridContainer" parent="Content/QuickJumpSection"]
layout_mode = 2
columns = 3

[node name="DawnButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Dawn"

[node name="MidmorningButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Midmorning"

[node name="NoonButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Noon"

[node name="DuskButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Dusk"

[node name="EveningButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Evening"

[node name="MidnightButton" type="Button" parent="Content/QuickJumpSection/QuickTimeButtons"]
layout_mode = 2
text = "Midnight"

[node name="InfoSection" type="VBoxContainer" parent="Content"]
layout_mode = 2
script = ExtResource("2_collapsible")
section_title = "Info"

[node name="GameTimeLabel" type="Label" parent="Content/InfoSection"]
layout_mode = 2
text = "Game Time: 0.00s"

[node name="DistanceLabel" type="Label" parent="Content/InfoSection"]
layout_mode = 2
text = "Distance: 0.0m"

[node name="ColorPreview" type="ColorRect" parent="Content/InfoSection"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(1, 0.6, 0.4, 1)

[node name="ColorModeButton" type="Button" parent="Content/InfoSection"]
layout_mode = 2
text = "Auto"
